Flicker prevention.

--- a/_slideshow.sass
+++ b/_slideshow.sass
@@ -17,6 +17,13 @@
     padding: 0
     list-style: none
 
+    // Prevent flickers
+    -webkit-transform: translate3d(0, 0, 0)
+    -moz-transform: translate3d(0, 0, 0)
+    -ms-transform: translate3d(0, 0, 0)
+    -o-transform: translate3d(0, 0, 0)
+    transform: translate3d(0, 0, 0)
+
   &
     overflow: hidden
     position: relative
